# fortran-forge

./: .gitignore  ACHIEVEMENT_COMPLETE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_SUMMARY.md  FORGEQT_ACHIEVEMENT.md  FORGE_QT_ROADMAP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_STATUS.md  README.md  README_CUSTOM_BACKEND.md  THE_COMPLETE_FORGEQT.md  forge.pc.in  forge_cairo_bindings.mod  forge_containers.mod  forge_errors.mod  forge_string_utils.mod  forge_thread_windows.mod  forge_types.mod  forge_winsock.mod  fpm.toml  temp_line.txt  test_json.f90  test_qstring.f90
.github/workflows/: ci.yml  release.yml
cmake/: ForGEConfig.cmake.in
docs/: BUILDING.md  Custom_GUI_Framework_Design.md  GUI_Framework_Comparison.md  best_practices.md  migration_guide.md  performance_guide.md  troubleshooting.md
docs/api/: architecture.md  forge_application.md  forge_backend_base.md  forge_box_layout.md  forge_button.md  forge_combo_box.md  forge_custom_backend_t.md  forge_entry.md  forge_errors.md  (+17 more)
examples/: CMakeLists.txt  animation_demo.f90  i18n_demo.f90  mvc_demo.f90  plugin_example.f90  qobject_demo.f90  qt_drawing_demo.f90  qt_test_benchmark_example.f90  qt_test_data_driven_example.f90  qt_test_example.f90  qt_test_gui_example.f90  qt_test_signal_spy_example.f90  sample_plugin.f90  xml_json_demo.f90
examples/advanced_calculator_app/: advanced_calculator_app.f90
examples/advanced_text_editor/: advanced_text_editor.f90
examples/basic_checkbox/: basic_checkbox.f90
examples/basic_combo/: basic_combo.f90
examples/basic_entry/: basic_entry.f90
examples/basic_label/: basic_label.f90
examples/basic_layout_grid/: basic_layout_grid.f90
examples/basic_layout_horizontal/: basic_layout_horizontal.f90
examples/basic_layout_vertical/: basic_layout_vertical.f90
examples/basic_radio/: basic_radio.f90
examples/basic_slider/: basic_slider.f90
examples/basic_spin/: basic_spin.f90
examples/basic_textview/: basic_textview.f90
examples/button_demo/: button_demo.f90
examples/cairo_rendering/: cairo_rendering.f90
examples/calculator/: calculator.f90
examples/custom_window/: custom_window.f90
examples/database_connections/: database_connections.f90
examples/database_crud_operations/: database_crud_operations.f90
examples/database_error_handling/: database_error_handling.f90
examples/database_model_view/: database_model_view.f90
examples/database_prepared_statements/: database_prepared_statements.f90
examples/database_sql_queries/: database_sql_queries.f90
examples/database_transactions/: database_transactions.f90
examples/event_button_click/: event_button_click.f90
examples/event_checkbox_toggle/: event_checkbox_toggle.f90
examples/event_combo_select/: event_combo_select.f90
examples/event_custom/: event_custom.f90
examples/event_entry_text/: event_entry_text.f90
examples/event_keyboard/: event_keyboard.f90
examples/event_mouse/: event_mouse.f90
examples/event_slider_change/: event_slider_change.f90
examples/event_window/: event_window.f90
examples/graphics_animation_basic/: graphics_animation_basic.f90
examples/graphics_basic_drawing/: graphics_basic_drawing.f90
examples/graphics_colors/: graphics_colors.f90
examples/graphics_shapes/: graphics_shapes.f90
examples/graphics_text_rendering/: graphics_text_rendering.f90
examples/hello_world/: hello_world.f90
examples/interactive_button/: interactive_button.f90
examples/layout_alignment/: layout_alignment.f90
examples/layout_complex_form/: layout_complex_form.f90
examples/layout_dashboard/: layout_dashboard.f90
examples/layout_expanding/: layout_expanding.f90
examples/layout_form/: layout_form.f90
examples/layout_margins/: layout_margins.f90
examples/layout_nested/: layout_nested.f90
examples/layout_size_policy/: layout_size_policy.f90
examples/layout_spacing/: layout_spacing.f90
examples/layout_wizard/: layout_wizard.f90
examples/network_http_client/: network_http_client.f90
examples/network_rest_api/: network_rest_api.f90
examples/network_ssl_client/: network_ssl_client.f90
examples/network_tcp_client/: network_tcp_client.f90
examples/network_tcp_server/: network_tcp_server.f90
examples/network_websocket/: network_websocket.f90
examples/platform_linux_system_info/: platform_linux_system_info.f90
examples/platform_windows_registry/: platform_windows_registry.f90
examples/qt_demo/: README.md  qt_demo.f90  qt_demo.qrc  qt_demo.ui
examples/qt_demo/translations/: qt_demo_en.ts
examples/signals_demo/: signals_demo.f90
examples/thread_basic_worker/: thread_basic_worker.f90
examples/thread_concurrent_tasks/: thread_concurrent_tasks.f90
examples/thread_thread_pool/: thread_thread_pool.f90
examples/todo_app/: todo_app.f90
examples/widget_dockwidget/: widget_dockwidget.f90
examples/widget_filedialog/: widget_filedialog.f90
examples/widget_groupbox/: widget_groupbox.f90
examples/widget_listview/: widget_listview.f90
examples/widget_mdi/: widget_mdi.f90
examples/widget_menubar/: widget_menubar.f90
examples/widget_messagebox/: widget_messagebox.f90
examples/widget_progressbar/: widget_progressbar.f90
examples/widget_scrollarea/: widget_scrollarea.f90
examples/widget_splitter/: widget_splitter.f90
examples/widget_stackedwidget/: widget_stackedwidget.f90
examples/widget_systemtray/: widget_systemtray.f90
examples/widget_tablewidget/: widget_tablewidget.f90
examples/widget_tabwidget/: widget_tabwidget.f90
scripts/: build.sh  build_linux.sh  build_macos.sh  build_windows.bat
src/: forge.f90  forge.mod  forge_backend.f90  forge_backend.mod  forge_errors.f90  forge_errors.mod  forge_events.f90  forge_events.mod  forge_layout.f90  forge_layout.mod  forge_layout_solver.f90  forge_qt.f90  forge_signals.f90  forge_sql.f90  forge_state_machine.f90  forge_stub_backend.mod  forge_types.f90  forge_types.mod  forge_widgets.f90  forge_widgets.mod  forge_window.f90  forge_window.mod
test/: CMakeLists.txt  test_concurrent.f90  test_i18n.f90  test_qobject.f90  test_qt_test.f90  test_signals.f90  test_types.f90
(+148 files in other folders)
